refs #5 Add an example for composition API

--- a/example/src/locales/en.json
+++ b/example/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "top": {
     "title": "hello world",
-    "description": "My name is {{name}}"
+    "description": "My name is {{name}}",
+    "weather": "Today is {{weather}}"
   }
 }
